added swagger and logger
