# controllers/object.go
@@ -7,6 +7,7 @@ import (
 	"github.com/Sathya1099/beego/models"
 	"github.com/Sathya1099/beego/utils"
 
+	"github.com/beego/beego/v2/core/logs"
 	beego "github.com/beego/beego/v2/server/web"
 )
 
@@ -22,20 +23,25 @@ type ObjectController struct {
 // @Failure 403 {string} error message
 // @router / [post]
 func (o *ObjectController) Post() {
+	logs.Info("Creating New Object")
 	o.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	var ob models.Object
 	err := json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
 	if err != nil {
+		logs.Error("Error unmarshalling object")
 		o.Data["json"] = map[string]string{"errMessage": "error while unmarshaling"}
 		o.Ctx.Output.Status = http.StatusForbidden
 	} else {
 		if validateErrors := utils.Validate(&ob); validateErrors != nil {
+			logs.Error(validateErrors)
 			o.Data["json"] = map[string][]string{"errMessages": validateErrors}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else if err := models.Insert(&ob); err != nil {
+			logs.Error(err)
 			o.Data["json"] = map[string]string{"errMessage": err.Error()}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else {
+			logs.Info("Object Created Successfully")
 			o.Data["json"] = map[string]string{"message": "object created successfully."}
 		}
 	}
@@ -49,17 +55,21 @@ func (o *ObjectController) Post() {
 // @Failure 403 :objectId is empty
 // @router /:objectId [get]
 func (o *ObjectController) Get() {
+	logs.Info("Getting User-Specified Object")
 	o.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	objectId := o.Ctx.Input.Param(":objectId")
 	if objectId == "" {
+		logs.Error("objectId is empty")
 		o.Data["json"] = map[string]string{"errMessage": "objectId is empty"}
 		o.Ctx.Output.Status = http.StatusForbidden
 	} else {
 		ob, err := models.Read(objectId)
 		if err != nil {
+			logs.Error(err)
 			o.Data["json"] = map[string]string{"errMessage": err.Error()}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else {
+			logs.Info("Specific Object Accessed Successfully")
 			o.Data["json"] = ob
 		}
 	}
@@ -72,12 +82,15 @@ func (o *ObjectController) Get() {
 // @Failure 403 {string} error message
 // @router / [get]
 func (o *ObjectController) GetAll() {
+	logs.Info("Getting All Objects")
 	o.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	obs, err := models.ReadAll()
 	if err != nil {
+		logs.Error(err)
 		o.Data["json"] = map[string]string{"errMessage": err.Error()}
 		o.Ctx.Output.Status = http.StatusForbidden
 	} else {
+		logs.Info("All Objects Accessed Successfully")
 		o.Data["json"] = obs
 	}
 	o.ServeJSON()
@@ -91,20 +104,25 @@ func (o *ObjectController) GetAll() {
 // @Failure 403 error messages
 // @router / [put]
 func (o *ObjectController) Put() {
+	logs.Info("Updating User-Specified Object")
 	o.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	var ob models.Object
 	err := json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
 	if err != nil {
+		logs.Error("Error unmarshalling object")
 		o.Data["json"] = map[string]string{"errMessage": "error while unmarshaling"}
 		o.Ctx.Output.Status = http.StatusForbidden
 	} else {
 		if validateErrors := utils.Validate(&ob); validateErrors != nil {
+			logs.Error(validateErrors)
 			o.Data["json"] = map[string][]string{"errMessages": validateErrors}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else if err = models.Update(&ob); err != nil {
+			logs.Error(err)
 			o.Data["json"] = map[string]string{"errMessage": err.Error()}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else {
+			logs.Info("object updated successfully.")
 			o.Data["json"] = map[string]string{"message": "object updated successfully."}
 		}
 	}
@@ -118,17 +136,21 @@ func (o *ObjectController) Put() {
 // @Failure 403 objectId is empty
 // @router /:objectId [delete]
 func (o *ObjectController) Delete() {
+	logs.Info("Deleting User-Specified Object")
 	o.Ctx.Output.Header("Access-Control-Allow-Origin", "*")
 	objectId := o.Ctx.Input.Param(":objectId")
 	if objectId == "" {
+		logs.Error("objectId is empty")
 		o.Data["json"] = map[string]string{"errMessage": "objectId is empty"}
 		o.Ctx.Output.Status = http.StatusForbidden
 	} else {
 		err := models.Delete(objectId)
 		if err != nil {
+			logs.Error(err)
 			o.Data["json"] = map[string]string{"errMessage": err.Error()}
 			o.Ctx.Output.Status = http.StatusForbidden
 		} else {
+			logs.Info("object deleted successfully.")
 			o.Data["json"] = map[string]string{"message": "object deleted successfully."}
 		}
 	}
