# routers/commentsRouter.go
@@ -1,0 +1,55 @@
+package routers
+
+import (
+	beego "github.com/beego/beego/v2/server/web"
+	"github.com/beego/beego/v2/server/web/context/param"
+)
+
+func init() {
+
+    beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Post",
+            Router: `/`,
+            AllowHTTPMethods: []string{"post"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "GetAll",
+            Router: `/`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Put",
+            Router: `/`,
+            AllowHTTPMethods: []string{"put"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Get",
+            Router: `/:objectId`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"] = append(beego.GlobalControllerRouter["github.com/Sathya1099/beego/controllers:ObjectController"],
+        beego.ControllerComments{
+            Method: "Delete",
+            Router: `/:objectId`,
+            AllowHTTPMethods: []string{"delete"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+}
