# routers/router.go
@@ -10,11 +10,12 @@ import (
 )
 
 func init() {
-	ns := beego.NewNamespace("/object",
-		beego.NSRouter("/", &controllers.ObjectController{}, "get:GetAll"),
-		beego.NSRouter("/:objectId", &controllers.ObjectController{}, "get:Get"),
-		beego.NSRouter("/", &controllers.ObjectController{}, "put:Put"),
-		beego.NSRouter("/:objectId", &controllers.ObjectController{}, "delete:Delete"),
+	ns := beego.NewNamespace("/v1",
+		beego.NSNamespace("/object",
+			beego.NSInclude(
+				&controllers.ObjectController{},
+			),
+		),
 	)
 
 	beego.AddNamespace(ns)
